# Django_learninglogs

./: build.sh  db.sqlite3  learning_logs.yaml  pyproject.toml  requirements.txt
learning_log/: settings.py  urls.py
learning_logs/: forms.py  models.py  urls.py  views.py
learning_logs/migrations/: 0001_initial.py  0002_entry.py  0003_topic_owner.py
learning_logs/templates/learning_logs/: edit_entry.html  new_entry.html  new_topic.html  topics.html
users/: urls.py  views.py
