[tool.poetry]
name = "poetry add django gunicorn"
version = "0.1.0"
description = ""
authors = ["leeboo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
Django = "^4.2.3"
dj-database-url = "^2.0.0"
dj-static = "^0.0.6"
django-bootstrap3 = "^23.4"
gunicorn = "^21.2.0"
static3 = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
